fixed mobile swiper gif, fixed footer on desktop but still acting up on mobile, fixing now

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,13 +1,14 @@
 .footer {
   background: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
   text-align: left;
   height: 30px;
   color: rgba(0,0,0,0.3);
   width: 100%;
-  position:fixed;    /*Here's what sticks it*/
-  bottom:0;          /*to the bottom of the window*/
-  left:0;
-  margin-top: 40px;
+  position: absolute;
+  bottom: 5px;
 }
 
 .footer-text p {
