--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -8,6 +8,5 @@
 }
 
 body {
-   background: -webkit-gradient(linear, left top, left bottom, from(#808080), to(#E6E6E6)) fixed;
-  position: relative;
+  background: -webkit-gradient(linear, left top, left bottom, from(#808080), to(#E6E6E6)) fixed;
 }
